@@ -13,12 +13,14 @@
 package org.assertj.tests.core.api.recursive.assertion;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.entry;
 import static org.assertj.core.api.BDDAssertions.then;
 import static org.assertj.core.api.BDDAssertions.thenNoException;
 import static org.assertj.core.api.recursive.assertion.RecursiveAssertionConfiguration.CollectionAssertionPolicy.COLLECTION_OBJECT_AND_ELEMENTS;
 import static org.assertj.core.api.recursive.assertion.RecursiveAssertionConfiguration.MapAssertionPolicy.MAP_OBJECT_AND_ENTRIES;
 import static org.assertj.core.api.recursive.assertion.RecursiveAssertionConfiguration.OptionalAssertionPolicy.OPTIONAL_OBJECT_AND_VALUE;
 import static org.assertj.core.util.Arrays.array;
+import static org.assertj.core.util.Lists.list;
 import static org.assertj.tests.core.util.AssertionsUtil.expectAssertionError;
 
 import java.util.ArrayList;
@@ -26,8 +28,12 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.stream.Stream;
 
+import org.assertj.tests.core.testkit.Maps;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 class RecursiveAssertionAssert_hasNoNullFields_Test {
 
@@ -44,14 +50,14 @@ class RecursiveAssertionAssert_hasNoNullFields_Test {
     // GIVEN
     Object testObject = objectGraphWithNullValue();
     // WHEN
-    AssertionError error = expectAssertionError(() -> assertThat(testObject).usingRecursiveAssertion().hasNoNullFields());
+    var error = expectAssertionError(() -> assertThat(testObject).usingRecursiveAssertion().hasNoNullFields());
     // THEN
     then(error).hasMessageContaining("books.[0].authors.[1].books.[1].authors.[1].email");
   }
 
   Object objectGraphNoNulls() {
     Author root = (Author) objectGraphWithNullValue();
-    root.books.get(0).authors[1].books.get(1).authors[1].email = "k.beck@recursive.test";
+    root.books.getFirst().authors[1].books.get(1).authors[1].email = "k.beck@recursive.test";
     return root;
   }
 
@@ -93,13 +99,13 @@ class RecursiveAssertionAssert_hasNoNullFields_Test {
   }
 
   @SuppressWarnings("unused")
-  class OuterWithArray {
+  static class OuterWithArray {
     InnerWithArray inner = new InnerWithArray();
     byte[] arrayOuter = null;
   }
 
   @SuppressWarnings("unused")
-  class InnerWithArray {
+  static class InnerWithArray {
     byte[] array = null;
   }
 
@@ -108,24 +114,21 @@ class RecursiveAssertionAssert_hasNoNullFields_Test {
     // GIVEN
     Object testObject = new OuterWithArray();
     // WHEN
-    AssertionError error = expectAssertionError(() -> assertThat(testObject).usingRecursiveAssertion()
-                                                                            .withCollectionAssertionPolicy(COLLECTION_OBJECT_AND_ELEMENTS)
-                                                                            .hasNoNullFields());
+    var error = expectAssertionError(() -> assertThat(testObject).usingRecursiveAssertion()
+                                                                 .withCollectionAssertionPolicy(COLLECTION_OBJECT_AND_ELEMENTS)
+                                                                 .hasNoNullFields());
     // THEN
     then(error).hasMessageContainingAll("arrayOuter", "inner.array");
-
-    assertThat(testObject).usingRecursiveAssertion().hasNoNullFields();
-
   }
 
   @SuppressWarnings("unused")
-  class OuterWithCollection {
+  static class OuterWithCollection {
     InnerWithCollection inner = new InnerWithCollection();
     Collection<String> collectionOuter = null;
   }
 
   @SuppressWarnings("unused")
-  class InnerWithCollection {
+  static class InnerWithCollection {
     Collection<String> collectionInner = null;
   }
 
@@ -134,21 +137,21 @@ class RecursiveAssertionAssert_hasNoNullFields_Test {
     // GIVEN
     Object testObject = new OuterWithCollection();
     // WHEN
-    AssertionError error = expectAssertionError(() -> assertThat(testObject).usingRecursiveAssertion()
-                                                                            .withCollectionAssertionPolicy(COLLECTION_OBJECT_AND_ELEMENTS)
-                                                                            .hasNoNullFields());
+    var error = expectAssertionError(() -> assertThat(testObject).usingRecursiveAssertion()
+                                                                 .withCollectionAssertionPolicy(COLLECTION_OBJECT_AND_ELEMENTS)
+                                                                 .hasNoNullFields());
     // THEN
     then(error).hasMessageContainingAll("collectionOuter", "inner.collection");
   }
 
   @SuppressWarnings("unused")
-  class OuterWithMap {
+  static class OuterWithMap {
     InnerWithMap inner = new InnerWithMap();
     Map<String, String> mapOuter = null;
   }
 
   @SuppressWarnings("unused")
-  class InnerWithMap {
+  static class InnerWithMap {
     Map<String, String> mapInner = null;
   }
 
@@ -157,21 +160,21 @@ class RecursiveAssertionAssert_hasNoNullFields_Test {
     // GIVEN
     Object testObject = new OuterWithMap();
     // WHEN
-    AssertionError error = expectAssertionError(() -> assertThat(testObject).usingRecursiveAssertion()
-                                                                            .withMapAssertionPolicy(MAP_OBJECT_AND_ENTRIES)
-                                                                            .hasNoNullFields());
+    var error = expectAssertionError(() -> assertThat(testObject).usingRecursiveAssertion()
+                                                                 .withMapAssertionPolicy(MAP_OBJECT_AND_ENTRIES)
+                                                                 .hasNoNullFields());
     // THEN
     then(error).hasMessageContainingAll("mapOuter", "inner.mapInner");
   }
 
-  @SuppressWarnings("unused")
-  class OuterWithOptional {
+  @SuppressWarnings({ "unused", "OptionalUsedAsFieldOrParameterType" })
+  static class OuterWithOptional {
     InnerWithOptional inner = new InnerWithOptional();
     Optional<String> optionalOuter = null;
   }
 
-  @SuppressWarnings("unused")
-  class InnerWithOptional {
+  @SuppressWarnings({ "unused", "OptionalUsedAsFieldOrParameterType" })
+  static class InnerWithOptional {
     Optional<String> optionalInner = null;
   }
 
@@ -180,9 +183,9 @@ class RecursiveAssertionAssert_hasNoNullFields_Test {
     // GIVEN
     Object testObject = new OuterWithOptional();
     // WHEN
-    AssertionError error = expectAssertionError(() -> assertThat(testObject).usingRecursiveAssertion()
-                                                                            .withOptionalAssertionPolicy(OPTIONAL_OBJECT_AND_VALUE)
-                                                                            .hasNoNullFields());
+    var error = expectAssertionError(() -> assertThat(testObject).usingRecursiveAssertion()
+                                                                 .withOptionalAssertionPolicy(OPTIONAL_OBJECT_AND_VALUE)
+                                                                 .hasNoNullFields());
     // THEN
     then(error).hasMessageContainingAll("optionalOuter", "inner.optional");
   }
@@ -190,7 +193,7 @@ class RecursiveAssertionAssert_hasNoNullFields_Test {
   interface I {
   }
 
-  class O {
+  static class O {
     public I i;
   }
 
@@ -219,4 +222,22 @@ class RecursiveAssertionAssert_hasNoNullFields_Test {
                          .hasNoNullFields();
   }
 
+  public record WithContainer(Object container, String string) {
+  }
+
+  @ParameterizedTest
+  @MethodSource
+  void should_report_container_with_null_values(WithContainer withContainer) {
+    // WHEN
+    var error = expectAssertionError(() -> assertThat(withContainer).usingRecursiveAssertion().hasNoNullFields());
+    // THEN
+    then(error).hasMessageContainingAll("The following fields did not satisfy the predicate", "container");
+  }
+
+  private static Stream<WithContainer> should_report_container_with_null_values() {
+    List<String> list = list(null, "value");
+    String[] array = new String[] { null, null, "value" };
+    Map<String, String> map = Maps.mapOf(entry("key", "value"), entry("key2", null));
+    return Stream.of(new WithContainer(list, "list"), new WithContainer(array, "array"), new WithContainer(map, "map"));
+  }
 }
